<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bruno.uri.MainActivity">
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"/>

      <TextView
        android:id="@+id/filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="10dp"
        android:text="@string/filename"/>

      <TextView
        android:id="@+id/path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filename"
        android:layout_marginTop="10dp"
        android:text="@string/path"/>

      <TextView
        android:id="@+id/mimeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/path"
        android:layout_marginTop="10dp"
        android:text="@string/mime_type"/>

      <TextView
        android:id="@+id/authority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mimeType"
        android:layout_marginTop="10dp"
        android:text="@string/authority"/>

      <TextView
        android:id="@+id/scheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authority"
        android:layout_marginTop="10dp"
        android:text="@string/uri_path"/>

      <TextView
        android:id="@+id/uriPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scheme"
        android:layout_marginTop="10dp"
        android:text="@string/uri_path"/>

      <TextView
        android:id="@+id/userInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uriPath"
        android:layout_marginTop="10dp"
        android:text="@string/user_info"/>

      <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userInfo"
        android:layout_marginTop="10dp"
        android:text="other info"/>

      <Button
        android:id="@+id/pickFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/others"
        android:text="@string/pick_file"
        android:layout_centerHorizontal="true"/>
    </RelativeLayout>
  </ScrollView>
</layout>